# libsmb2

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  c-coverage-report.md  c-test-memory-safety-findings.md  plan.md
libsmb2_ffi/: Cargo.toml
libsmb2_ffi/src/: lib.rs
libsmb2_ffi/tests/: smoke_tests.rs
libsmb2_rs/: Cargo.toml  TEST_MANIFEST.md
libsmb2_rs/src/: lib.rs
libsmb2_rs/src/include/: asprintf.rs  config.rs  libsmb2_private.rs  mod.rs  slist.rs
libsmb2_rs/src/include/smb2/: dcerpc_coder.rs  libsmb2-dcerpc-lsa.rs  libsmb2-dcerpc-srvsvc.rs  libsmb2-dcerpc.rs  libsmb2-raw.rs  libsmb2.rs  mod.rs  smb2.rs
libsmb2_rs/src/lib/: aes.rs  aes128ccm.rs  aes_apple.rs  aes_reference.rs  alloc.rs  asn1-ber.rs  compat.rs  dcerpc-lsa.rs  dcerpc-srvsvc.rs  dcerpc.rs  errors.rs  hmac-md5.rs  hmac.rs  init.rs  krb5-wrapper.rs  libsmb2.rs  md4c.rs  md5.rs  mod.rs  ntlmssp.rs  pdu.rs  sha.rs  sha1.rs  sha224-256.rs  smb2-cmd-close.rs  smb2-cmd-create.rs  smb2-cmd-ioctl.rs  smb2-cmd-negotiate.rs  smb2-cmd-notify-change.rs  smb2-cmd-oplock-break.rs  smb2-cmd-query-directory.rs  smb2-cmd-query-info.rs  smb2-cmd-read.rs  smb2-cmd-session-setup.rs  smb2-cmd-set-info.rs  smb2-cmd-tree-connect.rs  smb2-cmd-tree-disconnect.rs  smb2-cmd-write.rs  smb2-command-probe.rs  smb2-data-file-info.rs  (+10 more)
libsmb2_rs/src/lib/dreamcast/: vfs.rs
libsmb2_rs/src/lib/ps2/: smb2_fio.rs  smb2man.rs
libsmb2_rs/src/lib/utils/: mod.rs  smb2-cp.rs  smb2-ls.rs
libsmb2_rs/tests/: spec_tests.rs  translated_tests.rs
libsmb2_rs/tests/spec_cases/include/: asprintf_spec.rs  libsmb2-private_spec.rs  (+2 more)
(+682 files in other folders)
