[package]
name = "libsmb2_rs"
version = "0.1.0"
edition = "2021"
license = "LGPL-2.1-or-later"
description = "Rust migration skeleton for libsmb2"

[lib]
path = "src/lib.rs"

[features]
default = []
migration_modules = []

[dependencies]
aes = "0.8"
ccm = "0.5"
cmac = "0.7"
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
md-5 = "0.10"
md4 = "0.10"
bitflags = "2"
thiserror = "1"
libc = "0.2"
